tests/tests2/66_macro_concat_end.expect
66_macro_concat_end.c:2: error: '##' invalid at end of macro
