tests/tests2/66_macro_concat_end.c
#define paste(A,B) A B##
paste(x,y)
